--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="column">
           <h2 class="title is-2 has-text-centered">Dove</h2>
           <h5 class="title is-5 hour">12:30</h5>
-          <h4 class="title is-4">Villa FLorio</h4>
+          <h3 class="title is-3 location">Villa Florio</h4>
           <p>Via Elio Morpurgo 8, Buttrio</p>
           <h5 class="title is-5 hour">14:00</h5>
-          <h4 class="title is-4">Castello di Buttrio</h4>
+          <h3 class="title is-3 location">Castello di Buttrio</h4>
           <p>Via Elio Morpurgo 9, Buttrio</p>
           <div class="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2770.8763073430346!2d13.341883182179538!3d46.013661117498835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sit!4v1493628561319" width="100%" height="300" frameborder="0" style="border:0" scrolling="no" marginheight="0" marginwidth="0" allowfullscreen></iframe>
