--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           <img class="image" width="100%" src="img/ghirland.png">
           <h3 class="title is-3 has-text-centered">26 Agosto 2017</h3>
           <h4 class="title is-4 has-text-centered">Villa Florio<br>&<br>Castello di Buttrio</h4>
-          <div class="has-text-centered"><a class="button">Save the date</a></div>
+          <div class="has-text-centered"><a class="button"  target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=MnBiZ2tuMHRqMzE5NXRzdm42YXF2cWpvcGMgbWF0dGVvLnBldHJhbmlAbQ&amp;tmsrc=matteo.petrani%40gmail.com">Save the date</a></div>
         </div>
       </div>
     </div>
