--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="column is-6-tablet is-offset-3-tablet">
           <h2 class="title is-2 has-text-centered">Regalo</h2>
           <p>Non abbiamo una lista nozze ma tanta voglia di vivere il Giappone per 2 settimane. Se desiderate contribuire al nostro viaggio di nozze, qui le coordinate:</p>
-          <h5 class="title is-5 iban">IT36V0301503200000003541828</h5>
+          <h5 class="title is-5 iban">Matteo Petrani<br>IT36V0301503200000003541828</h5>
         </div>
       </div>
     </div>
