--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<meta name="robots" content="index, follow">
 	<meta http-equiv="content-language" content="en">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
 	<!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   <script src="https://use.typekit.net/rhb8ayt.js"></script>
@@ -48,10 +50,10 @@
           <h2 class="title is-2 has-text-centered">Dove</h2>
           <h5 class="title is-5 hour">12:30</h5>
           <h3 class="title is-3 location">Villa Florio</h4>
-          <p>Via Elio Morpurgo 8, Buttrio</p>
+          <p><a href="https://goo.gl/maps/DEhWWMUqEpM2" target="_blank">Via Elio Morpurgo 8, Buttrio &#9758;</a></p>
           <h5 class="title is-5 hour">14:00</h5>
           <h3 class="title is-3 location">Castello di Buttrio</h4>
-          <p>Via Elio Morpurgo 9, Buttrio</p>
+          <p><a href="https://goo.gl/maps/J8SRY5ZzLgM2" target="_blank">Via Elio Morpurgo 9, Buttrio &#9758;</a></p>
           <div class="overlay" onClick="style.pointerEvents='none'"></div>
           <div class="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2770.8763073430346!2d13.341883182179538!3d46.013661117498835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sit!4v1493628561319" width="100%" height="300" frameborder="0" style="border:0" scrolling="no" marginheight="0" marginwidth="0" allowfullscreen></iframe>
