correct title and meta

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="author" content="Matteo Petrani" />
 	<meta name="copyright" content="Matteo Petrani" />
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Matteo Petrani, interaction designer at Sketchin</title>
-	<meta name="description" content="Designer at Sketchin, glider pilot, mindful, detail oriented and tech savvy.">
-	<meta name="keywords" content="Matteo Petrani, Matteo, Petrani, Sketchin, UX designer, UI designer">
+	<title>Matteo e Laura</title>
+	<meta name="description" content="Finalmente sposi!">
+	<meta name="keywords" content="Matteo, Laura">
 	<meta name="robots" content="index, follow">
 	<meta http-equiv="content-language" content="en">
 
